src/test/ui/error-codes/E0504.stderr
error[E0504]: cannot move `fancy_num` into closure because it is borrowed
  --> $DIR/E0504.rs:20:40
   |
17 |     let fancy_ref = &fancy_num;
   |                      --------- borrow of `fancy_num` occurs here
...
20 |         println!("child function: {}", fancy_num.num); //~ ERROR E0504
   |                                        ^^^^^^^^^ move into closure occurs here

error: aborting due to previous error

